# ###############################################################################
# CMake 基本设置
# ###############################################################################

# ###############################################################################
# 导入要使用的模块配置
# ###############################################################################

# ###############################################################################
# 变量初始化
# ###############################################################################

# ###############################################################################
# 全局函数配置
# ###############################################################################

# ###############################################################################
# 项目设置
# ###############################################################################

# 添加可执行文件
add_executable(MyWebServerTestExecutable
  "../MyWebServer/src/log.cpp"
  "../MyWebServer/src/sqlconnpool.cpp"
  "../MyWebServer/src/epoller.cpp"
  "../MyWebServer/src/webserver.cpp"
  "../MyWebServer/src/heaptimer.cpp"
  "../MyWebServer/src/httpconn.cpp"
  "../MyWebServer/src/httprequest.cpp"
  "../MyWebServer/src/httpresponse.cpp"
  "../MyWebServer/src/buffer.cpp"
  "test.cpp"
)

# ###############################################################################
# 注入宏定义
# ###############################################################################

# ###############################################################################
# 子项目设置
# ###############################################################################

# ###############################################################################
# 头文件库设置
# ###############################################################################
target_include_directories(MyWebServerTestExecutable
  INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>$<INSTALL_INTERFACE:include>) # 构建时使用使用当前源码路径作为头文件搜索路径, 安装时使用 include 作为头文件搜索路径

# 设置头文件搜索路径
set(PUBLIC_INCLUDE_DIRS
  "../MyWebServer/include"
  "D:/vcpkg/installed/x64-windows/include"
)

set(PRIVATE_INCLUDE_DIRS
  ""
)

target_include_directories(MyWebServerTestExecutable
  PUBLIC ${PUBLIC_INCLUDE_DIRS}
  PRIVATE ${PRIVATE_INCLUDE_DIRS}
)

# ###############################################################################
# 依赖库设置
# ###############################################################################

# 链接子项目的依赖库
# target_link_libraries(Analyzer PRIVATE AVSAlgorithm)
# target_link_libraries(Analyzer PRIVATE AVSAlarmManage)
set(PUBLIC_LINK_LIBRARIES

  "$<$<CONFIG:Debug>:"
  ""
  ">"
  "$<$<CONFIG:Release>:"
  ""
  ">"
)

set(PRIVATE_LINK_LIBRARIES "")

target_link_libraries(MyWebServerTestExecutable
  PUBLIC ${PUBLIC_LINK_LIBRARIES}
  PRIVATE ${PRIVATE_LINK_LIBRARIES})

# ###############################################################################
# 文件预处理
# ###############################################################################

# ###############################################################################
# 打包规则
# ###############################################################################

# ################################################################################
# # 安装规则
# ################################################################################
